# pytest-result-sender

./: .flake8  README.md  pyproject.toml
src/pytest_result_sender/: plugin.py
tests/: test_abc.py
