[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "NBDatsuya", email = "2646809050@qq.com" },
]
dependencies = [
    "pytest>=8.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 ."
] }

[tool.black]
exclude = '''
/(
    \.git
    | venv
    | build
    | dist
)/
'''